# hal_xtensa

./: CMakeLists.txt  README
.github/: license_config.yml
.github/workflows/: license_check.yml
include/xtensa/: hal.h
src/hal/: Makefile.am  cache_asm.S  disass.c  int_asm.S  interrupts.c  mem_ecc_parity.S  miscellaneous.S  set_region_translate.c  state.c  state_asm.S
zephyr/soc/acp_6_0/xtensa/config/: core-isa.h  core-matmap.h  system.h  tie-asm.h  tie.h
zephyr/soc/dc233c/xtensa/config/: core-isa.h  core-matmap.h  specreg.h  system.h  tie-asm.h  tie.h
zephyr/soc/intel_ace15_mtpm/xtensa/config/: core-isa.h  core-matmap.h  specreg.h  system.h  tie.h
zephyr/soc/intel_ace20_lnl/xtensa/config/: specreg.h
zephyr/soc/intel_ace30_ptl/xtensa/config/: core-matmap.h  specreg.h  system.h  tie-asm.h
zephyr/soc/intel_apl_adsp/xtensa/: reset-vector.S
zephyr/soc/intel_s1000/xtensa/config/: core-matmap.h  specreg.h  system.h  tie-asm.h  tie.h
zephyr/soc/mimx8ml8/xtensa/config/: core-isa.h  tie-asm.h
zephyr/soc/mt8195_adsp/xtensa/config/: core-isa.h  tie-asm.h
zephyr/soc/mtk_mt818x_adsp/xtensa/config/: core-isa.h  core-matmap.h  defs.h  secure.h  specreg.h  system.h  tie-asm.h  tie.h
zephyr/soc/mtk_mt8195_adsp/xtensa/config/: core-matmap.h  defs.h  secure.h  specreg.h  system.h  tie-asm.h  tie.h
zephyr/soc/mtk_mt8196_adsp/xtensa/config/: core.h  secure.h  specreg.h  system.h  tie-asm.h  tie.h
zephyr/soc/nxp_imx8/xtensa/config/: core-isa.h  tie.h
zephyr/soc/nxp_imx8m/xtensa/config/: core-matmap.h  system.h
zephyr/soc/nxp_imx_adsp/xtensa/config/: system.h
(+30 files in other folders)
